Add Local Swagger for local development
